# Casentinoday2020AmigaDemo

./: .gitignore  DEADJOE  Makefile  Makefile.am  README.md  casentino2020.adf  casentino2020test.adf  configure.ac  core  makeadf.sh  src.uaem
_res/: Aded320x224.iff  Aded320x224.plt  Aded320x224.raw  Aded320x224_1.h  Aded320x224_1.raw  Aded320x224_2.h  Aded320x224_2.raw  Aded320x224palette.h  Makefile.am  VampireItalialogo.h  VampireItalialogo.iff  VampireItalialogo.raw  VampireItalialogopalette.h  VampireItalialogopalette.plt  ball2bpl16x16_frame1.h  ball2bpl16x16_frame1.iff  ball2bpl16x16_frame1.raw  ball2bpl16x16_frame1_palette.h  ball2bpl16x16_frame2.h  ball2bpl16x16_frame2.iff  ball2bpl16x16_frame2.raw  ball2bpl16x16_frame3.h  ball2bpl16x16_frame3.iff  ball2bpl16x16_frame3.raw  ball2bpl16x16_frame4.h  ball2bpl16x16_frame4.iff  ball2bpl16x16_frame4.raw  ball2bpl16x16_frame5.h  ball2bpl32x32_frame1.iff  ball2bpl32x32_frame1.raw  ball2bpl32x32_frame1_1.h  ball2bpl32x32_frame1_1.raw  ball2bpl32x32_frame1_2.h  ball2bpl32x32_frame1_2.raw  ball2bpl32x32_frame2.iff  ball2bpl32x32_frame2.raw  ball2bpl32x32_frame2_1.h  ball2bpl32x32_frame2_1.raw  ball2bpl32x32_frame2_2.h  ball2bpl32x32_frame2_2.raw  (+27 more)
_res/bkup/: 3pallla2bpl16x16.h  3pallla2bpl16x16.iff  3pallla2bpl16x16.plt  3pallla2bpl16x16.raw  ball2bpl16x16_frame1.iff  ball2bpl16x16_frame2.iff  ball2bpl16x16_frame3.iff  ball2bpl16x16_frame4.iff  ball2bpl16x16_frame5.iff  valchiria.h  valchiria.plt  valchiria.raw  valchiria320x224x16.iff  valchiriapalette.h
_res/tests/: intermezzoV2.iff
adf/: APCopy  IFF  bootimg  bootimgstart
adf/c/: bootimg
adf/s/: startup-sequence
bootimg/: Makefile  bootimg.s
floppy/: Makefile.am
floppy/adf/: bootimg  casentino2020  readme
floppy/adf/c/: nwait  tinyview
floppy/adf/data/: bootimg.iff
floppy/adf/s/: startup-sequence
scripts/: Aded320x224img1.raw  Aded320x224img2.raw  Aded320x224img4.raw  Aded320x224img5.raw  Aded320x224img6.raw  lol  lol.h  lol2.h  splitiff.sh
src/: Makefile.am  acecustom.c  acecustom.h  casentino.c  casentino.h  casentino2020  collisionsmanagement.c  collisionsmanagement.h  copperlist.s  customtrigonometry.h  demointro.c  demointro.h  drawline_ptr_linkable.s  global.h  main.c  main.h  matrix.c  matrix.h  music_ptr_linkable.s  physics.c  physics.h  queues.c  queues.h  radiallineshiddenpart.c  radiallineshiddenpart.h  shardeddata.h  stage1.c  stage2.c  stage3dcube.c  stageattraction.c  stages.h  stagesconfiguration.h  vectors.c  vectors.h
src/tests/: bootimg  bootimg.s  bootimg.sh  bootimg.s~  crow_img_8.raw
tests/: 3dcube  3dcube.c  Makefile.am  matrixperformance  matrixperformance.c  projection  projection.c  testtrig  testtrig.c
tests/.deps/: 3dcube.Po  matrixperformance.Po  projection.Po  testtrig.Po
